--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,5 +6,22 @@
 </head>
 <body>
 <h1>My Recipes!</h1>
+
+<table>
+
+    <tr>
+        <td>ID</td>
+        <td>Description</td>
+    </tr>
+
+    <!--/*@thymesVar id="recipes" type="Set<guru.springframework.domain.Recipe>"*/-->
+    <tr th:each="recipe : ${recipes}">
+        <!--/*@thymesVar id="id" type="java.lang.Long"*/-->
+        <td th:text="${recipe.id}"></td>
+        <!--/*@thymesVar id="description" type="java.lang.String"*/-->
+        <td th:text="${recipe.description}"></td>
+    </tr>
+</table>
+
 </body>
 </html>
