--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,25 +3,45 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Recipe Home</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
 </head>
-<body>
-<h1>My Recipes!</h1>
-
-<table>
-
-    <tr>
-        <td>ID</td>
-        <td>Description</td>
-    </tr>
-
-    <!--/*@thymesVar id="recipes" type="Set<guru.springframework.domain.Recipe>"*/-->
-    <tr th:each="recipe : ${recipes}">
-        <!--/*@thymesVar id="id" type="java.lang.Long"*/-->
-        <td th:text="${recipe.id}"></td>
-        <!--/*@thymesVar id="description" type="java.lang.String"*/-->
-        <td th:text="${recipe.description}"></td>
-    </tr>
-</table>
-
-</body>
+    <body style="width: 100%">
+        <div class="container-fluid" style="margin-top: 20px">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h1 class="panel-title">My Recipes!</h1>
+                        </div>
+                        <div class="panel-body">
+                            <div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
+                                <table class="table table-hover">
+                                    <thead class="thead-inverse">
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Description</th>
+                                    </tr>
+                                    </thead>
+                                    <!--/*@thymesVar id="recipes" type="Set<guru.springframework.domain.Recipe>"*/-->
+                                    <tr th:each="recipe : ${recipes}">
+                                        <!--/*@thymesVar id="id" type="java.lang.Long"*/-->
+                                        <td th:text="${recipe.id}"></td>
+                                        <!--/*@thymesVar id="description" type="java.lang.String"*/-->
+                                        <td th:text="${recipe.description}"></td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
