--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,6 +35,7 @@
                                         <td th:text="${recipe.id}"></td>
                                         <!--/*@thymesVar id="description" type="java.lang.String"*/-->
                                         <td th:text="${recipe.description}"></td>
+                                        <td><a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">View</a></td>
                                     </tr>
                                 </table>
                             </div>
