create or update recipe functionality added

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,8 @@
                                         <td th:text="${recipe.id}"></td>
                                         <!--/*@thymesVar id="description" type="java.lang.String"*/-->
                                         <td th:text="${recipe.description}"></td>
-                                        <td><a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">View</a></td>
+                                        <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show' }">View</a></td>
+                                        <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/update' }">Update</a></td>
                                     </tr>
                                 </table>
                             </div>
