--- a/src/main/resources/templates/recipe/ingredient/list.html
+++ b/src/main/resources/templates/recipe/ingredient/list.html
@@ -39,8 +39,8 @@
               </thead>
               <tr th:each="ingredient : ${recipe.ingredients}">
                 <td th:text="${ingredient.id}">334</td>
-                <td th:text="${ingredient.amount} + ' ' + ${ingredient.uom.getDescription()} + ' ' + ${ingredient.description} + '/show'"></td>
-                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/show'}">View</a></td>
+                <td th:text="${ingredient.amount} + ' ' + ${ingredient.uom.getDescription()} + ' ' + ${ingredient.description}"></td>
+                <td><a href="#" th:href="@{'/ingredient/' + ${ingredient.id}}">View</a></td>
                 <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/update'}">Update</a></td>
                 <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/delete'}">Delete</a></td>
               </tr>
