--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -45,7 +45,7 @@
                             </div>
                             <div class="col-md-6">
                                 <img src="../../static/images/guacamole400x400WithX.jpg"
-                                     th:src="@{'/recipe/' + ${recipe.id} + '/recipeimage'}"
+                                     th:src="@{'/recipe/' + ${recipe.id} + '/recipeImage'}"
                                      width="200" height="200">
                             </div>
                         </div>
